; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mscc/extr_ocelot_ace.c_is2_entry_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mscc/extr_ocelot_ace.c_is2_entry_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.ocelot_ace_rule = type { %struct.TYPE_4__, %struct.TYPE_5__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_5__ = type { %struct.ocelot* }
%struct.ocelot = type { i32 }
%struct.vcap_data = type { i32, i32, i32 }

@VCAP_CMD_READ = common dso_local global i32 0, align 4
@VCAP_SEL_COUNTER = common dso_local global i32 0, align 4
@VCAP_TG_HALF = common dso_local global i32 0, align 4
@vcap_is2 = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ocelot_ace_rule*, i32)* @is2_entry_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @is2_entry_get(%struct.ocelot_ace_rule* %0, i32 %1) #0 {
  %3 = alloca %struct.ocelot_ace_rule*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ocelot*, align 8
  %6 = alloca %struct.vcap_data, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ocelot_ace_rule* %0, %struct.ocelot_ace_rule** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.ocelot_ace_rule*, %struct.ocelot_ace_rule** %3, align 8
  %10 = getelementptr inbounds %struct.ocelot_ace_rule, %struct.ocelot_ace_rule* %9, i32 0, i32 1
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load %struct.ocelot*, %struct.ocelot** %12, align 8
  store %struct.ocelot* %13, %struct.ocelot** %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = sdiv i32 %14, 2
  store i32 %15, i32* %7, align 4
  %16 = load %struct.ocelot*, %struct.ocelot** %5, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @VCAP_CMD_READ, align 4
  %19 = load i32, i32* @VCAP_SEL_COUNTER, align 4
  %20 = call i32 @vcap_row_cmd(%struct.ocelot* %16, i32 %17, i32 %18, i32 %19)
  %21 = load %struct.ocelot*, %struct.ocelot** %5, align 8
  %22 = call i32 @vcap_cache2action(%struct.ocelot* %21, %struct.vcap_data* %6)
  %23 = load i32, i32* @VCAP_TG_HALF, align 4
  %24 = getelementptr inbounds %struct.vcap_data, %struct.vcap_data* %6, i32 0, i32 2
  store i32 %23, i32* %24, align 4
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @is2_data_get(%struct.vcap_data* %6, i32 %25)
  %27 = getelementptr inbounds %struct.vcap_data, %struct.vcap_data* %6, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = getelementptr inbounds %struct.vcap_data, %struct.vcap_data* %6, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @vcap_is2, i32 0, i32 0), align 4
  %32 = call i32 @vcap_data_get(i32 %28, i32 %30, i32 %31)
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %8, align 4
  %34 = load %struct.ocelot_ace_rule*, %struct.ocelot_ace_rule** %3, align 8
  %35 = getelementptr inbounds %struct.ocelot_ace_rule, %struct.ocelot_ace_rule* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  store i32 %33, i32* %36, align 8
  ret void
}

declare dso_local i32 @vcap_row_cmd(%struct.ocelot*, i32, i32, i32) #1

declare dso_local i32 @vcap_cache2action(%struct.ocelot*, %struct.vcap_data*) #1

declare dso_local i32 @is2_data_get(%struct.vcap_data*, i32) #1

declare dso_local i32 @vcap_data_get(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
